refactor: change border images and text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- ACTIVITIES SECTION -->
     <div class="activities-section">
-        <h1>Top three activities to visit at Porto</h1>
+        <h2> Some Activities to visit at Porto</h2>
         <div class="activities">
             <div class="tower">
                 <img src="images/tower.jpg" id="tower" alt="Tower with clock and garden.">
