refactor: edit text and update some code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- ACTIVITIES SECTION -->
     <div class="activities-section">
-        <h2> Some Activities to visit at Porto</h2>
+        <h2>Top three Activities to visit at Porto</h2>
         <div class="activities">
             <div class="tower">
                 <img src="images/tower.jpg" id="tower" alt="Tower with clock and garden.">
@@ -41,14 +41,16 @@
         <div class="festival">
             <img src="images/festival-popular.jpg" id="popular" alt="firework in the sky">
             <div class="text-festival">
-                <h2 class="extra-section-h2">Popular festival of St John</h2>
+                <h2>Discover more about the city</h2>
+                <h3>Popular festival of St John</h3>
                 <p><span class="word">São João </span>is one of the biggest festivals in Portugal and a highly anticipated event in Porto, celebrated on June 24, with festivities beginning the night before and lasting until dawn. Over time, various traditions have become integral to the celebration, such as hitting people with leeks, symbolizing fertility, and using lemon balm branches. Plastic hammers, a modern replacement, are also used to tap people's heads, creating loud sounds. The event features hot air balloons, fireworks over the Douro River, manjerico pots with poems, and the iconic "cascatas sanjoaninas," miniatures depicting the city's crafts and culture. Music and concerts fill the city throughout the day and night.</p>
             </div>
         </div>
         <div class="sports">
             <img src="images/fcporto.jpg" id="sport" alt="dragon stadium">
             <div class="text-sports">
-                <h2 class="extra-section-h2">Dragon Stadium and FCP Museum</h2>
+                <h2>About Sports</h2>
+                <h3>Dragon Stadium and FCP Museum</h3>
                 <p>The<span class="word"> Estádio do Dragão,</span> home of FC Porto, offers more than just football matches. It also houses the award-winning FC Porto Museum, known for its high-quality collection and interactive features.<br>
                 For more details, click <a href="https://www.fcporto.pt/en/" target="_blank">here</a> to visit the official website.</p>
             </div>
