--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,16 +43,16 @@
         <div class="festival">
             <img src="images/festival-popular.jpg" id="popular" alt="firework in the sky">
             <div class="text-festival">
-                <h2>Discover more about the city</h2>
-                <h3>Popular festival of St John</h3>
-                <p><span class="word">São João </span>is one of the biggest festivals in Portugal and a highly anticipated event in Porto, celebrated on June 24, with festivities beginning the night before and lasting until dawn. Over time, various traditions have become integral to the celebration, such as hitting people with leeks, symbolizing fertility, and using lemon balm branches. Plastic hammers, a modern replacement, are also used to tap people's heads, creating loud sounds. The event features hot air balloons, fireworks over the Douro River, manjerico pots with poems, and the iconic "cascatas sanjoaninas," miniatures depicting the city's crafts and culture. Music and concerts fill the city throughout the day and night.</p>
+                <h3>Discover More About the City</h3>
+                <h4>Popular festival of St John</h4>
+                <p><span class="word">São João </span>is one of the biggest festivals in Portugal and a highly anticipated event in Porto, celebrated on June 24, with festivities beginning the night before and lasting until dawn. Over time, various traditions have become integral to the celebration, such as hitting people with leeks, symbolizing fertility, and using lemon balm branches. Plastic hammers, a modern replacement, are also used to tap people's heads, creating loud sounds. The event features hot air balloons, fireworks over the Douro River and manjerico pots with poems. Music and concerts fill the city throughout the day and night.</p>
             </div>
         </div>
         <div class="sports">
             <img src="images/fcporto.jpg" id="sport" alt="dragon stadium">
             <div class="text-sports">
-                <h2>About Sports</h2>
-                <h3>Dragon Stadium and FCP Museum</h3>
+                <h3>About Sports</h3>
+                <h4>Dragon Stadium and FCP Museum</h4>
                 <p>The<span class="word"> Estádio do Dragão,</span> home of FC Porto, offers more than just football matches. It also houses the award-winning FC Porto Museum, known for its high-quality collection and interactive features.<br>
                 For more details, click <a href="https://www.fcporto.pt/en/" target="_blank">here</a> to visit the official website.</p>
             </div>
